# models/transaction_model.go
@@ -1,0 +1,27 @@
+package models
+
+type Transaction struct {
+	ID          int                 `json:"id"`
+	TotalAmount int                 `json:"total_amount"`
+	CreatedAt   string              `json:"created_at,omitempty"`
+	DeletedAt   string              `json:"deleted_at,omitempty"`
+	Details     []TransactionDetail `json:"details"`
+}
+
+type TransactionDetail struct {
+	ID            int    `json:"id"`
+	TransactionID int    `json:"transaction_id"`
+	ProductID     int    `json:"product_id"`
+	ProductName   string `json:"product_name,omitempty"`
+	Quantity      int    `json:"quantity"`
+	Subtotal      int    `json:"subtotal"`
+}
+
+type CheckoutItem struct {
+	ProductID int `json:"product_id"`
+	Quantity  int `json:"quantity"`
+}
+
+type CheckoutRequest struct {
+	Items []CheckoutItem `json:"items"`
+}
